# LangChainChatbot

./: .gitignore  README.md  all-deployments.yaml  docker-compose.yaml  insert_data.py  main.py  pyproject.toml
FAQ/: general.txt  health.txt  special.txt
frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json  postcss.config.js  vite.config.js
frontend/src/: App.css  App.jsx
service2/: Dockerfile  app.py
service3/: Dockerfile  app.py  wait-for-postgres.sh
