[project]
name = "langchainchatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.14",
    "langchain-community>=0.3.26",
    "langchain[openai]>=0.3.26",
    "openai>=1.93.0",
    "pgvector>=0.4.1",
    "postgres>=4.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
